Fix depth-related flickering

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -29,15 +29,15 @@
   -moz-transition-delay: 0s
   /* WebKit
   -webkit-transition-property: opacity
-  -webkit-transition-duration: 0s
+  -webkit-transition-duration: 1s
   -webkit-transition-delay: 0s
   /* Opera
   -o-transition-property: opacity
-  -o-transition-duration: 0s
+  -o-transition-duration: 1s
   -o-transition-delay: 0s
   /* Standard
   transition-property: opacity
-  transition-duration: 0s
+  transition-duration: 1s
   transition-delay: 0s
   .header
     background-color: #303030
